--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   margin: 0;
 }
 
@@ -24,12 +24,12 @@
   width: 100%;
   background-repeat: no-repeat;
 }
-.scrollToTop img{
+.scrollToTop img {
   width: 45px;
   height: 45px;
   border-radius: 50%;
 }
-.scrollToTop{
+.scrollToTop {
   position: fixed;
   right: 20px;
   bottom: 20px;
@@ -108,7 +108,7 @@ a.active {
 .furniture_img img {
   object-fit: cover;
 }
-.cards_img{
+.cards_img {
   width: 100%;
   height: 24rem;
   overflow: hidden;
@@ -116,17 +116,17 @@ a.active {
   padding: 0;
   background-color: transparent;
 }
-.cards_img img{
+.cards_img img {
   width: 100%;
   height: 100%;
   -webkit-transform: scale(1.15);
-	transform: scale(1.15);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+  transform: scale(1.15);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
-.cards_img img:hover{
+.cards_img img:hover {
   -webkit-transform: scale(1);
-	transform: scale(1);
+  transform: scale(1);
 }
 
 .furniture_ad_card:hover {
@@ -193,21 +193,21 @@ a.active {
   height: 300px;
   border-radius: 15px;
   margin: 0;
-	padding: 0;
-	background: #fff;
-	overflow: hidden;
+  padding: 0;
+  background: #fff;
+  overflow: hidden;
 }
-.gallery div img{
+.gallery div img {
   -webkit-transform: scale(1);
   width: 100%;
   height: 100%;
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 .gallery img:hover {
   -webkit-transform: scale(1.16);
-	transform: scale(1.16);
+  transform: scale(1.16);
 }
 
 .i1 {
@@ -260,6 +260,93 @@ a.active {
 }
 
 /* Design page */
+
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {
+  opacity: 0.7;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 50;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 50px;
+  gap: 10px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100dvh;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.modal-content,
+#caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .design_wrapper {
   display: grid;
   margin-bottom: 150px;
@@ -271,70 +358,99 @@ a.active {
     "d11 d11 d11 d12 d12 d12 d13 d13 d13 d14 d14 d14"
     "d15 d15 d15 d15 d16 d16 d16 d16 d17 d17 d17 d17";
 }
-.design_wrapper img {
+.design_wrapper + div {
   height: 320px;
   transition: 0.3s transform;
   border-radius: 25px;
 }
+.design_wrapper div img {
+  height: 100%;
+  width: 100%;
+  transition: 0.3s transform;
+  border-radius: 25px;
+}
+
+.design_wrapper .modal img {
+  min-height: 550px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+.design_wrapper .modal img:hover {
+  transform: scale(1);
+}
 .design_wrapper img:hover {
-  transform: scale(1.16);
+  transform: scale(1.08);
 }
 
 .d1 {
   grid-area: d1;
   width: 100%;
+  position: relative;
 }
 .d2 {
   grid-area: d2;
   width: 100%;
+  position: relative;
 }
 .d3 {
   grid-area: d3;
   width: 100%;
+  position: relative;
 }
 .d4 {
   grid-area: d4;
   width: 100%;
+  position: relative;
 }
 .d5 {
   grid-area: d5;
   width: 100%;
+  position: relative;
 }
 .d6 {
   grid-area: d6;
   width: 100%;
+  position: relative;
 }
 .d7 {
   grid-area: d7;
   width: 100%;
+  position: relative;
 }
 .d8 {
   grid-area: d8;
   width: 100%;
+  position: relative;
 }
 .d9 {
   grid-area: d9;
   width: 100%;
+  position: relative;
 }
 .d10 {
   grid-area: d10;
   width: 100%;
+  position: relative;
 }
 .d11 {
   grid-area: d11;
   width: 100%;
+  position: relative;
 }
 .d12 {
   grid-area: d12;
   width: 100%;
+  position: relative;
 }
 .d13 {
   grid-area: d13;
   width: 100%;
+  position: relative;
 }
 .d14 {
   grid-area: d14;
   width: 100%;
+  position: relative;
 }
 .d15 {
   grid-area: d15;
@@ -354,7 +470,7 @@ a.active {
   overflow-x: hidden !important;
   overflow-y: auto !important;
 }
-.categorySlider .swiper-button-prev{
+.categorySlider .swiper-button-prev {
   width: 50px !important;
   height: 50px !important;
   border: 1px solid #aaa;
@@ -363,7 +479,7 @@ a.active {
   right: 70px !important;
   left: auto !important;
 }
-.categorySlider .swiper-button-next{
+.categorySlider .swiper-button-next {
   width: 50px !important;
   height: 50px !important;
   border: 1px solid #aaa;
@@ -372,13 +488,12 @@ a.active {
   right: 0 !important;
   left: auto !important;
 }
-.categorySlider .swiper-button-prev:after{
+.categorySlider .swiper-button-prev:after {
   font-size: 20px !important;
 }
-.categorySlider .swiper-button-next:after{
+.categorySlider .swiper-button-next:after {
   font-size: 20px !important;
 }
-
 
 #carouselHome .carousel-control-prev-icon {
   border-radius: 50%;
@@ -584,58 +699,58 @@ a.active {
 }
 /* AutoSlider page */
 
-.autoslider_img{
+.autoslider_img {
   position: relative;
   width: 100%;
   height: 24rem;
   margin-bottom: 40px;
 }
-.autoslider_img img{
+.autoslider_img img {
   width: 100%;
   height: 100%;
 }
 
-.autoslider_img div{
+.autoslider_img div {
   position: absolute;
   top: 10px;
   left: 10px;
   display: flex;
   border-radius: 15px;
 }
-.autoslider_img div p:nth-child(1){
+.autoslider_img div p:nth-child(1) {
   padding: 8px 10px;
-  background-color: #C60416DB;
+  background-color: #c60416db;
   color: #fff;
   border-radius: 10px 0 0 10px;
   font-size: 14px;
 }
-.autoslider_img div p:nth-child(2){
+.autoslider_img div p:nth-child(2) {
   padding: 8px 10px;
   background-color: #000;
   color: #fff;
   border-radius: 0 10px 10px 0;
   font-size: 14px;
 }
-.autoslider_content{
+.autoslider_content {
   margin-bottom: 45px;
 }
-.autoslider_content h3{
+.autoslider_content h3 {
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 10px;
   color: #333;
 }
-.autoslider_content div{
+.autoslider_content div {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-.autoslider_content div p:first-child{
+.autoslider_content div p:first-child {
   color: #333;
   font-size: 20px;
 }
-.autoslider_content div p:nth-child(2){
-  color: #989898DB;
+.autoslider_content div p:nth-child(2) {
+  color: #989898db;
   font-size: 17px;
   text-decoration: line-through;
 }
