--- a/src/components/grid/grid.css
+++ b/src/components/grid/grid.css
@@ -47,27 +47,27 @@
   font-size: 14px;
   font-weight: 600;
 }
-.g1 {
+.grid_category > div:nth-child(1) {
   grid-area: g1;
   width: 100%;
 }
-.g2 {
+.grid_category > div:nth-child(2) {
   grid-area: g2;
   width: 100%;
 }
-.g3 {
+.grid_category > div:nth-child(3) {
   grid-area: g3;
   width: 100%;
 }
-.g4 {
+.grid_category > div:nth-child(4) {
   grid-area: g4;
   width: 100%;
 }
-.g5 {
+.grid_category > div:nth-child(5){
   grid-area: g5;
   width: 100%;
 }
-.g6 {
+.grid_category > div:nth-child(6) {
   grid-area: g6;
   width: 100%;
 }
